--- a/style_light.css
+++ b/style_light.css
@@ -505,6 +505,7 @@ ol, li {
   width: 100%;
   height: 100%;
   scroll-snap-align: center;
+  pointer-events: none;
 }
 
 @media (hover: hover) {
@@ -595,4 +596,3 @@ ol, li {
   text-align: center;
   pointer-events: none;
 }
-
